scripts/iptables-export
# Generated by iptables-save v1.8.4 on Sat Aug 28 21:42:49 2021
*nat
:PREROUTING ACCEPT [35:1752]
:INPUT ACCEPT [35:1732]
:OUTPUT ACCEPT [12:720]
:POSTROUTING ACCEPT [25:1500]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8443
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.20.0.0/16 ! -o br-b243dec9ced1 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-a2f76db6b4d8 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-4880d5bfab0d -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.20.0.3/32 -d 172.20.0.3/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 172.20.0.3/32 -d 172.20.0.3/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A DOCKER -i br-b243dec9ced1 -j RETURN
-A DOCKER -i br-a2f76db6b4d8 -j RETURN
-A DOCKER -i br-4880d5bfab0d -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-b243dec9ced1 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 172.20.0.3:443
-A DOCKER ! -i br-b243dec9ced1 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.20.0.3:80
COMMIT
# Completed on Sat Aug 28 21:42:49 2021
# Generated by iptables-save v1.8.4 on Sat Aug 28 21:42:49 2021
*filter
:INPUT ACCEPT [290:84499]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [541:123960]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-b243dec9ced1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-b243dec9ced1 -j DOCKER
-A FORWARD -i br-b243dec9ced1 ! -o br-b243dec9ced1 -j ACCEPT
-A FORWARD -i br-b243dec9ced1 -o br-b243dec9ced1 -j ACCEPT
-A FORWARD -o br-a2f76db6b4d8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-a2f76db6b4d8 -j DOCKER
-A FORWARD -i br-a2f76db6b4d8 ! -o br-a2f76db6b4d8 -j ACCEPT
-A FORWARD -i br-a2f76db6b4d8 -o br-a2f76db6b4d8 -j ACCEPT
-A FORWARD -o br-4880d5bfab0d -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-4880d5bfab0d -j DOCKER
-A FORWARD -i br-4880d5bfab0d ! -o br-4880d5bfab0d -j ACCEPT
-A FORWARD -i br-4880d5bfab0d -o br-4880d5bfab0d -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.20.0.3/32 ! -i br-b243dec9ced1 -o br-b243dec9ced1 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.20.0.3/32 ! -i br-b243dec9ced1 -o br-b243dec9ced1 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-b243dec9ced1 ! -o br-b243dec9ced1 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-a2f76db6b4d8 ! -o br-a2f76db6b4d8 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-4880d5bfab0d ! -o br-4880d5bfab0d -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-b243dec9ced1 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-a2f76db6b4d8 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-4880d5bfab0d -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sat Aug 28 21:42:49 2021
